--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
   },
   "homepage": "https://github.com/raphaklaus/database-benchmark#readme",
   "dependencies": {
+    "bluebird": "^3.4.6",
     "bookshelf": "^0.10.1",
+    "bunyan": "^1.8.1",
+    "express": "^4.14.0",
     "knex": "^0.12.0",
+    "mongoose": "^4.6.0",
     "pg": "^6.1.0"
   }
 }
